--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+.personio-header-container {
+	max-width: 1000px;
+	width: 100%;
+	margin: auto;
+	padding: 5px 0px;
+}
+.personio-main-container {
+	max-width: 1000px;
+	width: 100%;
+	margin: auto;
+}
+.personio-details-container {
+	display: flex;
+	flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@keyframes pulse {
+	0% {
+		background-position: 0% 0%;
+	}
+	100% {
+		background-position: -135% 0%;
+	}
+}
+.personio-skeleton-circle {
+	height: 40px;
+	background-color: #ebeef2;
+	animation: pulse 0.65s infinite alternate;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.personio-skeleton-line {
+	display: inline-block;
+	vertical-align: middle;
+	height: 60%;
+	width: 100%;
+	background: linear-gradient(
+		-90deg,
+		var(--grey_medium) 0%,
+		var(--grey_dark) 50%,
+		var(--grey_medium) 100%
+	);
+	background-size: 400% 400%;
+	animation: pulse 1.2s ease-in-out infinite;
+	width: 5.5em;
+	border-radius: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.personio-skeleton-line::before {
+	content: '\00a0';
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.persionio-input {
+	background: var(--white);
+	border: none;
+	box-shadow: 0 0 0 1px var(--grey_dark);
+	box-sizing: border-box;
+	border-radius: 4px;
+	color: var(--dark);
+	padding: 0 15px;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
 }
