--- a/src/components/Filters/index.css
+++ b/src/components/Filters/index.css
@@ -2,3 +2,25 @@
 	display: flex;
 	flex-direction: row;
 }
+.personio-filters-box-container {
+	position: relative;
+	display: inline-block;
+}
+.persionio-filters-dropdown-container {
+	position: absolute;
+	top: 8px;
+	z-index: 100;
+	min-width: 150px;
+	overflow-x: visible;
+	overflow-x: initial;
+	overflow-y: auto;
+	background: #fff;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	border: 1px solid #dce6ec;
+	border-radius: 4px;
+	box-shadow: 0 2px 7px 0 rgb(0 0 0 / 10%);
+	-webkit-animation: _27DR3 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.175) both;
+	animation: _27DR3 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.175) both;
+	will-change: transform;
+}
