improving the table style

--- a/src/components/Table/index.css
+++ b/src/components/Table/index.css
@@ -35,9 +35,10 @@
 .personio-table-container table th,
 .personio-table-container table td {
 	margin: 0;
-	padding: 21.5px 13px 21.5px 24px;
+	padding: 12px 12px;
 	background-color: var(--white);
 	align-items: center;
+	font-size: 14px;
 }
 .personio-table-container tr:hover td {
 	background-color: var(--hover_state);
@@ -47,12 +48,18 @@
 	border: 1px solid #d9deda;
 }
 .personio-table-container table thead th {
-	padding: 19px 13px 19px 24px;
 	text-align: left;
-	height: 52px;
 	position: sticky;
 	top: 0;
 	box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
+	/* background-color: #d3dfe7; */
+	background-color: #f4f7f9;
+	font-size: 14px;
+	line-height: 24px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	max-width: 300px;
 }
 .personio-table-body-text {
 	font-weight: 200;
