--- a/src/components/Filters/index.css
+++ b/src/components/Filters/index.css
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: row;
 	margin-bottom: 30px;
+	align-items: center;
 }
 .personio-filters-box-container {
 	position: relative;
@@ -28,7 +29,8 @@
 }
 .personio-filters-dropdown-container {
 	position: absolute;
-	top: 8px;
+	left: 0;
+	top: 57px;
 	z-index: 100;
 	min-width: 150px;
 	overflow-x: visible;
@@ -46,6 +48,7 @@
 }
 
 .personio-input {
+	margin: 0 18px 0 18px;
 	background: var(--white);
 	border: none;
 	box-shadow: 0 0 0 1px var(--grey_dark);
@@ -58,4 +61,20 @@
 	line-height: 20px;
 	width: 290px;
 	height: 36px;
+}
+.personio-clear-filter-button {
+	margin-left: 18px;
+	color: #0db5df;
+	background-color: white;
+	border: none;
+	cursor: pointer;
+	padding: 8px 16px;
+}
+.personio-clear-filter-button:hover {
+	background-color: #f4f7f9;
+}
+.personio-filters-dropdown-list {
+	max-height: 275px;
+	overflow: auto;
+	padding: 15px;
 }
